// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building Buttons return active match buttons 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "custom_id": "reportBlue",
        "disabled": false,
        "emoji": null,
        "label": "🔷 Blue Team Won 🔷",
        "style": 2,
        "type": 2,
        "url": null,
      },
      Object {
        "custom_id": "reportOrange",
        "disabled": false,
        "emoji": null,
        "label": "🔶 Orange Team Won 🔶",
        "style": 2,
        "type": 2,
        "url": null,
      },
    ],
    "type": 1,
  },
]
`;

exports[`Building Buttons return cancel new season message 1`] = `
Object {
  "components": Array [],
  "embeds": Array [
    Object {
      "author": null,
      "color": 10038562,
      "description": "No changes were made and the current season is still active.",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": Object {
        "height": undefined,
        "proxyURL": undefined,
        "url": "https://raw.githubusercontent.com/mattwells19/UNCC-Six-Mans.js/main/media/norm_still.png",
        "width": undefined,
      },
      "timestamp": null,
      "title": "New Season Cancelled",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`Building Buttons return cancel new season message due to active match 1`] = `
Object {
  "components": Array [],
  "embeds": Array [
    Object {
      "author": null,
      "color": 10038562,
      "description": "There is currently an active match preventing a new season.  Please finish the current match.",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": Object {
        "height": undefined,
        "proxyURL": undefined,
        "url": "https://raw.githubusercontent.com/mattwells19/UNCC-Six-Mans.js/main/media/norm_still.png",
        "width": undefined,
      },
      "timestamp": null,
      "title": "New Season Cancelled",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`Building Buttons return confirm new season message 1`] = `
Object {
  "components": Array [],
  "embeds": Array [
    Object {
      "author": null,
      "color": 5763719,
      "description": "The previous season has ended and the new season season has begun.",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": Object {
        "height": undefined,
        "proxyURL": undefined,
        "url": "https://raw.githubusercontent.com/mattwells19/UNCC-Six-Mans.js/main/media/norm_still.png",
        "width": undefined,
      },
      "timestamp": null,
      "title": "New Season Started",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`Building Buttons return full queue buttons 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "custom_id": "chooseTeam",
        "disabled": false,
        "emoji": null,
        "label": "Captains",
        "style": 1,
        "type": 2,
        "url": null,
      },
      Object {
        "custom_id": "randomizeTeams",
        "disabled": false,
        "emoji": null,
        "label": "Random",
        "style": 1,
        "type": 2,
        "url": null,
      },
      Object {
        "custom_id": "leaveQueue",
        "disabled": false,
        "emoji": null,
        "label": "Leave",
        "style": 4,
        "type": 2,
        "url": null,
      },
    ],
    "type": 1,
  },
]
`;

exports[`Building Buttons return new season message 1`] = `
Object {
  "components": Array [
    Object {
      "components": Array [
        Object {
          "custom_id": "confirmNewEvent",
          "disabled": false,
          "emoji": null,
          "label": "Confirm",
          "style": 1,
          "type": 2,
          "url": null,
        },
        Object {
          "custom_id": "cancelNewEvent",
          "disabled": false,
          "emoji": null,
          "label": "Cancel",
          "style": 4,
          "type": 2,
          "url": null,
        },
      ],
      "type": 1,
    },
  ],
  "embeds": Array [
    Object {
      "author": null,
      "color": 10038562,
      "description": "You are about to create a new season. This will end the current season.",
      "fields": Array [
        Object {
          "inline": true,
          "name": "⚠️ CAUTION ⚠️",
          "value": "THIS CANNOT BE UNDONE",
        },
      ],
      "footer": null,
      "image": null,
      "thumbnail": Object {
        "height": undefined,
        "proxyURL": undefined,
        "url": "https://raw.githubusercontent.com/mattwells19/UNCC-Six-Mans.js/main/media/norm_still.png",
        "width": undefined,
      },
      "timestamp": null,
      "title": "Start new season season?",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`Building Buttons return queue buttons 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "custom_id": "joinQueue",
        "disabled": false,
        "emoji": null,
        "label": "Join",
        "style": 3,
        "type": 2,
        "url": null,
      },
      Object {
        "custom_id": "leaveQueue",
        "disabled": false,
        "emoji": null,
        "label": "Leave",
        "style": 4,
        "type": 2,
        "url": null,
      },
    ],
    "type": 1,
  },
]
`;
